<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/txt_numero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ckbinario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/ck_Binario"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja" />

    <CheckBox
        android:id="@+id/ckdecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/ck_Decimal"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbinario" />

    <CheckBox
        android:id="@+id/ckoctal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/ck_Octal"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckdecimal" />

    <EditText
        android:id="@+id/cajab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/ckbinario"
        app:layout_constraintTop_toBottomOf="@+id/caja" />

    <EditText
        android:id="@+id/cajad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/ckdecimal"
        app:layout_constraintTop_toBottomOf="@+id/cajab" />

    <EditText
        android:id="@+id/cajao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/ckoctal"
        app:layout_constraintTop_toBottomOf="@+id/cajad" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="100dp"
        android:onClick="Convertir"
        android:text="@string/btn_convertir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajao" />

    <CheckBox
        android:id="@+id/ckhexadecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/ck_Hexadecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajao" />

    <EditText
        android:id="@+id/cajah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/ckhexadecimal"
        app:layout_constraintTop_toBottomOf="@+id/cajao" />

    <RadioGroup
        android:id="@+id/radioNumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioBinario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Binario">

        </RadioButton>

        <RadioButton
            android:id="@+id/radioDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Decimal">

        </RadioButton>

        <RadioButton
            android:id="@+id/radioOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Octal">

        </RadioButton>

        <RadioButton
            android:id="@+id/radioHexadecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hexadecimal"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="52dp">

        </RadioButton>

    </RadioGroup>

    <EditText
        android:id="@+id/caja"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>